--- a/Day3/ExA.html
+++ b/Day3/ExA.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-    <nav class="navbar navbar-expand-md navbar-light sticky-top ">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-transparent" id="myNavbar">
         <a href="#" class="navbar-brand">THE ONLY BOOTSTRAP PAGE</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="collapse_target">
@@ -25,7 +25,7 @@
             <a class="nav-link" href="#icons">FOUR ICONS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">BULLSHIT</a>
+            <a class="nav-link" href="#bullshit">BULLSHIT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">CALL ME</a>
@@ -39,7 +39,7 @@
         <h1>HEY LOOK, IT'S EVERY BOOTSTRAP WEBSITE EVER</h1>
         <hr>
         <p>Take a look around at the same fucking bootstrap page you've seen ten million times before! Featuring all the same things as those pages!</p>
-        <a href="#about" class="btn btn-danger btn-xl page-scroll">This button makes the page scroll</a>
+        <a href="#about" class="btn btn-danger btn-xl">This button makes the page scroll</a>
         </div>
     </div>
     </header>
@@ -86,9 +86,64 @@
                 </div>
             </div>
         </section> 
-  
+        <section class="bg-danger" id="bullshit">
+            <div class="container-fluid">
+                <div class="row no-gutters">
+                    <div class="col-md-6 col-lg-3 text-center ">
+                        <div class="box">
+                        <div class="img_contain">
+                        <img class ="random_pic" src="./bird.jpg">
+                        </div>
+                        <div class="text_contain">
+                        <div class="text">
+                        <p>some string</p>
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 text-center ">
+                        <div class="box">
+                        <div class="img_contain">
+                        <img class ="random_pic" src="./ghost.png">
+                        </div>
+                        <div class="text_contain">
+                        <div class="text">
+                        <p>some string</p>
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 text-center ">
+                        <div class="box">
+                        <div class="img_contain">
+                        <img class ="random_pic" src="./jojo.jpg">
+                        </div>
+                        <div class="text_contain">
+                        <div class="text">
+                        <p>some string</p>
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 text-center ">
+                        <div class="box">
+                        <div class="img_contain">
+                        <img class ="random_pic" src="./images.jpeg">
+                        </div>
+                        <div class="text_contain">
+                        <div class="text">
+                        <p>some string</p>
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> 
+      
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <cript src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="./ExA.js"></script>
 </body>
 </html>
