--- a/mywebsite/Aboutme.html
+++ b/mywebsite/Aboutme.html
@@ -51,32 +51,84 @@
         <h1>Brief Introduction</h1>
         <div class="heading-underline"></div>
         <p>My name is Edwin Chan.<br> In 2018, I graduated from University, majored in Accounting and worked in audit
-            industry for two years. <br>I have different hobbies in my spare time.</p>
+            industry for two years. <br>I have different hobbies. Hover images below to see description.</p>
         <div class="row no-padding">
             <div class="portfolio col-sm-6 col-md-4">
-                <a href="home_images/4eecf29cc5d5ebb5a41e039abb4912b9.jpg" target="_blank"><img
-                        class="img-responsive resize" src="home_images/4eecf29cc5d5ebb5a41e039abb4912b9.jpg"></a>
+                <div class="imgBox">
+                    <a href="home_images/4eecf29cc5d5ebb5a41e039abb4912b9.jpg" target="_blank"><img
+                            class="img-responsive resize" src="home_images/4eecf29cc5d5ebb5a41e039abb4912b9.jpg"></a>
+                </div>
+                <div class="layer">
+                    <div class="content">
+                        <h4>
+                            League of Legend
+                        </h4>
+                        <p>I 've played this game for 5 year. LOL.</p>
+                    </div>
+                </div>
             </div>
             <div class="portfolio col-sm-6 col-md-4">
-                <a href="home_images/661c52691444b73dc515336565391b89.jpg" target="_blank"><img class="img-responsive"
-                        src="home_images/661c52691444b73dc515336565391b89.jpg"></a>
+                <div class="imgBox">
+                    <a href="home_images/661c52691444b73dc515336565391b89.jpg" target="_blank"><img
+                            class="img-responsive" src="home_images/661c52691444b73dc515336565391b89.jpg"></a>
+                </div>
+                <div class="layer">
+                    <div class="content">
+                        <h4>Animation - HunterXHunter</h4>
+                        <p>I am a Japanese animation fan. Learning Japanese language to understand characters dialogue. </p>
+                    </div>
+                </div>
             </div>
             <div class="portfolio col-sm-6 col-md-4">
-                <a href="home_images/tumblr_nbr8h6B7ZM1syv3zao5_1280.jpg" target="_blank"><img class="img-responsive"
-                        src="home_images/tumblr_nbr8h6B7ZM1syv3zao5_1280.jpg"></a>
+                <div class="imgBox">
+                    <a href="home_images/tumblr_nbr8h6B7ZM1syv3zao5_1280.jpg" target="_blank"><img
+                            class="img-responsive" src="home_images/tumblr_nbr8h6B7ZM1syv3zao5_1280.jpg"></a>
+                </div>
+                <div class="layer">
+                    <div class="content">
+                        <h4>
+                            Taekwondo
+                        </h4>
+                        <p>Learning this martial art since 2018, a great challenge to my flexibility.</p>
+                    </div>
+                </div>
             </div>
             <div class="portfolio col-sm-6 col-md-4">
-                <a href="home_images/e3704e18fd0e69b0d7a64f6d0921c98d.jpg" target="_blank"><img class="img-responsive"
-                        src="home_images/e3704e18fd0e69b0d7a64f6d0921c98d.jpg"></a>
+                <div class="imgBox">
+                    <a href="home_images/e3704e18fd0e69b0d7a64f6d0921c98d.jpg" target="_blank"><img
+                            class="img-responsive" src="home_images/e3704e18fd0e69b0d7a64f6d0921c98d.jpg"></a>
+                </div>
+                <div class="layer">
+                    <div class="content">
+                        <h4>Boxing</h4>
+                        <p>Joined classes for 3 months and it suspended due to outbreak of COVID-19... </p>
+                    </div>
+                </div>
             </div>
             <div class="portfolio col-sm-6 col-md-4">
-                <a href="home_images/3cf3499dd8fbdcdd6100c9a9c324bf44.jpg" target="_blank"><img class="img-responsive"
-                        src="home_images/3cf3499dd8fbdcdd6100c9a9c324bf44.jpg"></a>
+                <div class="imgBox">
+                    <a href="home_images/3cf3499dd8fbdcdd6100c9a9c324bf44.jpg" target="_blank"><img
+                            class="img-responsive" src="home_images/3cf3499dd8fbdcdd6100c9a9c324bf44.jpg"></a>
+                </div>
+                <div class="layer">
+                    <div class="content">
+                        <h4>Hiking</h4>
+                        <p>I go hiking every weekend now, it becomes a popular public events!</p>
+                    </div>
+                </div>
             </div>
             <div class="portfolio col-sm-6 col-md-4">
 
-                <a href="" target="_blank"><img src=""></a>
+                <div class="imgBox">
+                    <a href="" target="_blank"><img src=""></a>
 
+                </div>
+                <div class="layer">
+                    <div class="content">
+                        <h4>LOL</h4>
+                        <p>this is my favourite online game.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -113,8 +165,9 @@
                             src="./album_images/TigerRoarRockRiver.png"></a>
                 </div>
                 <div class="card-body">
-                    <h6></h6>
-                    <p class="card-text text-muted"></p>
+                    <h6>Tiger Roar Rock River</h6>
+                    <p class="card-text text-muted">At the top of Mid Kau Nga Hang in Lantau
+                        Island, it is at the intersection of Mid Kau Nga and East Kau Nga</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
@@ -123,8 +176,9 @@
                             src="./album_images/Luk ChauStoneBushland.png"></a>
                 </div>
                 <div class="card-body">
-                    <h6></h6>
-                    <p class="card-text text-muted"></p>
+                    <h6>Luk Chau Stone Bushland</h6>
+                    <p class="card-text text-muted">Located in Sai Kung, between Ma On Shan and Shek Nga Shan. 414m
+                        high. There are vast piles of huge rocks at the western peak of Luk Chau Shan.</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
@@ -132,17 +186,24 @@
                     <a class="lightbox" href=""><img class="card-img-top" src="./album_images/IMG_0047.jpg"></a>
                 </div>
                 <div class="card-body">
-                    <h6></h6>
-                    <p class="card-text text-muted"></p>
+                    <h6>Cheung Tsui</h6>
+                    <p class="card-text text-muted">Headland lying in the eastern corner of Sai Kung. Stretching from
+                        Tung Wan Shan, it extends eastward to the Pacific Ocean.</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
                 <div class="card border-0 transform-on-hover">
-                    <a class="lightbox" href=""><img class="card-img-top" src="./album_images/IMG_0030.jpg"></a>
+                    <a class="lightbox" href=""><img class="card-img-top"
+                            src="./album_images/Screen Shot 2020-04-14 at 6.17.20 PM.png"></a>
                 </div>
                 <div class="card-body">
-                    <h6></h6>
-                    <p class="card-text text-muted"></p>
+                    <h6>Tai Long Wan, Sai Kung</h6>
+                    <p class="card-text text-muted">Tai Long Wan is the name of the bay, consists of four breathtaking
+                        beaches –
+                        Sai Wan,
+                        Ham Tin,
+                        Tai Wan, and
+                        Tung Wan.</p>
                 </div>
             </div>
         </div>
@@ -168,8 +229,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="aboutme.js"></script>
 </body>
 
 </html>
-
-<script type="text/javascript" src="aboutme.js"></script>
