--- a/mywebsite/Aboutme.html
+++ b/mywebsite/Aboutme.html
@@ -207,11 +207,7 @@
                 <div class="card-body">
                     <h6>Tai Long Wan, Sai Kung</h6>
                     <p class="card-text text-muted">Tai Long Wan is the name of the bay, consists of four breathtaking
-                        beaches –
-                        Sai Wan,
-                        Ham Tin,
-                        Tai Wan, and
-                        Tung Wan.</p>
+                        beaches – Sai Wan, Ham Tin, Tai Wan, and Tung Wan.</p>
                 </div>
             </div>
         </div>
