--- a/day11/exG/index.html
+++ b/day11/exG/index.html
@@ -13,8 +13,8 @@
         <input type="text" name="country2" placeholder="country" />
         <input type='submit' value="submit"/>
     </form>
-    <p id="sr">Sunrise of country 1 is <span> </span>  than country 2 by </p>
-    <p id="ss"></p>
+    <p id="sr">Sunrise of <span> </span> is <span> </span>  than <span></span> by </p>
+    <p id="ss">Sunset of <span> </span> is <span> </span>  than <span></span> by </p>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
